[gd_scene load_steps=9 format=2]

[ext_resource path="res://Interface/Titlescreen.png" type="Texture" id=1]
[ext_resource path="res://Interface/Fonts/Gugi-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Interface/Title_button_normal.png" type="Texture" id=3]
[ext_resource path="res://Interface/Title_button_hover.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://Audio/intro_music.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 57.5
margin_top = 8.0
margin_right = 262.5
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Simple Pirate"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -149.0
margin_top = 44.0
margin_right = -85.0
margin_bottom = 160.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Start" type="Label" parent="VBoxContainer/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -8.5
margin_right = 102.5
margin_bottom = 8.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="TextureButton" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 64.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Tutorial" type="Label" parent="VBoxContainer/Tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -8.5
margin_right = 102.5
margin_bottom = 8.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tutorial"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 64.0
margin_bottom = 76.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Quit" type="Label" parent="VBoxContainer/Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -8.5
margin_right = 102.5
margin_bottom = 8.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
